# mini-software-house

./: .dockerignore  .gitignore  CHECKLIST_SOFTWARE_HOUSE_1050TI.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile.lightweight  Dockerfile.sandbox  Makefile  Makefile.docker  PRODUCT_ROADMAP.md  PROJECT_STRUCTURE.md  README.DOCKER.md  README.md  README_VRAM_OPTIMIZATION.md  app.py  database.py  docker-compose.yml  docker-entrypoint.sh  events.py  logger.py  main_pipeline.py  models.py  pull_models.sh  pyproject.toml  setup_environment.py
.github/workflows/: ci.yml
docs/: GUIDE.md  INDEX.md  SPRINT3_PLAN.md  SPRINT_FINETUNE.md  SPRINT_PLAN.md
docs/architecture/: OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCT_ROADMAP.md
docs/archive/: REORGANIZATION_COMPLETE.md  STRUCTURE_VISUALIZATION.md  mini_software_house_agentes.docx
docs/quickstart/: DOCKER_BUILD_GUIDE.md  DOCKER_QUICKSTART.md  NAMING_ENGINE.md  RUST_QUICK_START.md  WEBPAGE_QUICKSTART.md  dev_plan.md
docs/status/: IMPLEMENTATION_COMPLETE.md  RUST_STATUS.md  SYSTEM_STATUS.md  TIER1_COMPLETE.md
modelfiles/: Modelfile.documenter-ft  Modelfile.executor-ft  Modelfile.planner-ft  Modelfile.tester-ft
plugins/: security_auditor.py
scripts/: benchmark.py  benchmark_results.json  create_website_pipeline.py  demo.py  docker-build-helper.sh  docker_demo.py  test_naming_engine.py  test_naming_full_pipeline.py  validate_docker_setup.py
scripts/finetune/: __init__.py  evaluate.py  export_gguf.py  export_training_data.py  train_dpo.py  train_sft.py
scripts/setup/: pull_models.sh  setup_environment.py  verify_setup.sh
src/: cli.py  html_generator.py  main.py  naming_engine.py
src/agents/: base.py  context_manager.py  documenter.py  executor.py  orchestrator.py  planner.py  plugin.py  plugin_loader.py  rag.py  tester.py
src/api/: app.py  routes.py  schemas.py  websocket.py
src/core/: __init__.py  database.py  events.py  logger.py  models.py
src/rust/ollama_client/: Cargo.toml
src/rust/ollama_client/src/: lib.rs
tests/: __init__.py  conftest.py  test_results.json
(+36 files in other folders)
